fixed style on mobile devices

--- a/AGtiv/src/app/components/home/home.component.scss
+++ b/AGtiv/src/app/components/home/home.component.scss
@@ -13,3 +13,29 @@ img.city {
 .progress {
     margin-top: calc(30%);
 }
+
+@media (min-width: 768px) and (max-width: 991px) {
+    img.city {
+        height: 10rem !important;
+        width: 10rem!important;
+    }
+}
+
+@media (max-width: 767px) {
+    img.city {
+        height: 5rem !important;
+        width: 5rem!important;
+    }
+    .progress {
+        margin-top: 1rem;
+    }
+}
+
+@media (max-width: 575px) {
+    .status {
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        padding: 2rem;
+        background-color: lighten($blue, 40);
+    }
+}
